src/objects/LF_Contact__c.object
<CustomObject>
    <description>Contact of individual whose case is being opened concerning items Lost</description>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FName__c</fullName>
        <label>FName</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LName__c</fullName>
        <label>LName</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <label>LF_Contact</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>LF_Contact_ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LF_Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>